# translator-live-agent

./: .env.example  .gitignore  README.md  agent.py  prompt.py  pyproject.toml  setup_audio.py  transcript_server.py
